# pca-face-recognition

./: CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: git.md
demo/: .gitignore  config.py  pyproject.toml  streamlit_app.py
demo/docs/: README.md  US-001-IMPL-PLAN.md  US-002-IMPL-PLAN.md  face-recognition-using-pca.ipynb  implementation-plan.md  pca-components-calc.md  pca-face-recognition-analysis.md  pca-face-recognition-ui-demo.md  streamlit_antd_components.md  streamlit_shadcn_ui.md  us-001-pca-facial-recognition.md
demo/src/: __init__.py  home.py  pca-facial-recognition.py
demo/src/archived/: 1_Eigenfaces.py  2_Face_Recognition.py  3_Face_Verification.py
demo/src/archived/core/: __init__.py  eigenfaces_recognizer.py  pca.py
demo/src/archived/visualization/: __init__.py  chart_utils.py  eigenfaces_viz.py
demo/src/common/: __init__.py  data_utils.py  image_ops.py  selection.py
demo/src/core/: mathematical_utils.py
demo/src/math/: __init__.py  pca_math.py
demo/src/pages/: 1-PCA Eigenfaces.py  2-Face Recognition.py  __init__.py
demo/src/processing/: __init__.py  dataset_loader.py  face_processor.py
demo/src/utils/: __init__.py  logger.py
demo/src/visualization/: visualizations.py
demo/tests/: __init__.py  test_math_common.py
maths/: README.md  advanced_pca_techniques.py  pca_derivation.html
project-files/: pca-face-recognition-deck.pptx  project-summary.md
scripts/: test_and_evaluate.py
